# data-relation

./: README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
data_relation/: __init__.py  parameters.py  utils.py
data_relation/tables/: base.py
data_relation/variables/: base.py  compute.py
test/: test.py
